# gto-arsenal-proto

./: manage.py  pyproject.toml  report.csv
gto_arsenal/: asgi.py  settings.py  urls.py  wsgi.py
report_formatter/: apps.py  forms.py  urls.py  views.py
report_formatter/templates/report_formatter/: upload.html
