[tool.poetry]
name = "gto-arsenal"
version = "0.1.0"
description = ""
authors = ["Toshi-Yano <t.yano.0726.6119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django-bootstrap4 = "^23.3"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
